--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -8,7 +8,7 @@
     <section>
       <div class="post-extra">
         <div class="pull-left">
-          <span>{{ page.date | date_to_long_string }}</span>
+            {{ page.date | date: "%y年%m月%d日 %A"}}
         </div>
         <div class="pull-right">
           {% include widgets/share_buttons %}
