--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -53,11 +53,14 @@
           <li{% if page.url == site.JB.messages_path %} class="active"{% endif %}>
             <a href="{{ site.JB.messages_path }}" rel="nofollow" title="留言板">留言板</a>
           </li>
+          <li{% if page.url == site.JB.archive_path %} class="active"{% endif %}>
+            <a href="{{ site.JB.archive_path }}" rel="nofollow" title="存档">存档</a>
+          </li>
           <li{% if page.url == site.JB.about_path %} class="active"{% endif %}>
             <a href="{{ site.JB.about_path }}" rel="nofollow" title="关于我">关于我</a>
           </li>
           <li>
-            <a href="{{ site.JB.rss_path }}" rel="nofollow" title="订阅 RSS"><i class="icon-large icon-fixed-width icon-rss"></i></a>
+            <a href="{{ site.JB.rss_path }}" rel="nofollow" title="订阅 RSS">RSS订阅<i class="icon-large icon-fixed-width icon-rss"></i></a>
           </li>
         </ul>
       </nav>
